--- a/index.html
+++ b/index.html
@@ -7,22 +7,8 @@
     <title>Smart Ticketing</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <!------------ Custom style ------------>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-
-        .font-inter {
-            font-family: "Inter", sans-serif;
-        }
-
-        .font-raleway {
-            font-family: "Raleway", sans-serif;
-        }
-
-        .banner-bg {
-            background: linear-gradient(180deg, rgba(3, 7, 18, 0.50) 0%, rgba(3, 7, 18, 0.00) 100%), url(./images/banner.png), lightgray 50% / cover no-repeat;
-        }
-    </style>
+    <!------------ css link ------------>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="md:min-w-[1280px] max-[500px]:min-w-[456px]">
@@ -46,7 +32,7 @@
                         <li><a href="#">Search</a></li>
                     </ul>
                 </div>
-                <a class=" lg:font-extrabold font-semibold md:text-4xl text-xl text-nowrap">Alpha-Ticket</a>
+                <a class=" md:font-extrabold font-bold md:text-4xl text-2xl text-nowrap">Alpha-Ticket</a>
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1 text-[18px]">
@@ -75,7 +61,7 @@
                 <p class="max-w-2xl mx-auto md:text-[18px] md:leading-8">Experience seamless travel booking with Alpha
                     Paribahan. Purchase your tickets hassle-free and embark on your journey effortlessly.</p>
                 <div>
-                    <a href="#buyTicket"
+                    <a onclick="buyTicket()"
                         class="px-5 py-3 cursor-pointer rounded-lg bg-[#1DD100] hover:bg-[#32b229] text-black text-xl font-semibold">Buy
                         Ticket</a>
                 </div>
@@ -127,7 +113,7 @@
                         </div>
                     </div>
                     <img src="./images/cupon-devider.png" alt="">
-                    <div class="py-12 flex justify-center items-center px-4 lg:px-12 ">
+                    <div class="py-12 flex justify-center items-center px-4 md:px-12 ">
                         <div class="space-y-4">
                             <h1 class="md:text-3xl text-2xl font-bold font-raleway ">NEW15</h1>
                             <p>Coupon Code</p>
@@ -145,7 +131,7 @@
                         </div>
                     </div>
                     <img src="./images/cupon-devider.png" alt="">
-                    <div class="py-12 flex justify-center items-center px-4 lg:px-12 ">
+                    <div class="py-12 flex justify-center items-center px-4 md:px-8 ">
                         <div class="space-y-4">
                             <h1 class="md:text-3xl text-2xl font-bold ">Couple 20</h1>
                             <p>Coupon Code</p>
@@ -192,9 +178,9 @@
                                 <h1 class="font-semibold">9:00 PM</h1>
                             </div>
                             <div class="flex md:flex-row flex-col max-[767px]:gap-5 justify-between mt-4">
-                                <p class="bg-[#0307120d] p-4 mr-5 rounded-lg">Boarding Point - Laxmipur</p>
-                                <p class="bg-[#0307120d] p-4 mr-5 rounded-lg">Boarding Point - Laxmipur</p>
-                                <p class="bg-[#0307120d] p-4 rounded-lg">Boarding Point - Laxmipur</p>
+                                <p class="bg-[#0307120d] p-4 md:mr-5 rounded-lg">Boarding Point - Laxmipur</p>
+                                <p class="bg-[#0307120d] p-4 md:mr-5 rounded-lg">Dropping Point - Bogura</p>
+                                <p class="bg-[#0307120d] p-4 rounded-lg">Est. Time - 11 Hour</p>
                             </div>
                         </div>
 
@@ -248,55 +234,55 @@
                                 <!-- Left side seats -->
                                 <div class="flex gap-7 w-full">
                                     <div class="flex flex-col gap-5 w-full">
-                                        <button class="btn">A1</button>
-                                        <button class="btn">B1</button>
-                                        <button class="btn">C1</button>
-                                        <button class="btn">D1</button>
-                                        <button class="btn">E1</button>
-                                        <button class="btn">F1</button>
-                                        <button class="btn">G1</button>
-                                        <button class="btn">H1</button>
-                                        <button class="btn">I1</button>
-                                        <button class="btn">J1</button>
+                                        <button id="A1" class="btn allSeats">A1</button>
+                                        <button id="B1" class="btn allSeats">B1</button>
+                                        <button id="C1" class="btn allSeats">C1</button>
+                                        <button id="D1" class="btn allSeats">D1</button>
+                                        <button id="E1" class="btn allSeats">E1</button>
+                                        <button id="F1" class="btn allSeats">F1</button>
+                                        <button id="G1" class="btn allSeats">G1</button>
+                                        <button id="H1" class="btn allSeats">H1</button>
+                                        <button id="I1" class="btn allSeats">I1</button>
+                                        <button id="J1" class="btn allSeats">J1</button>
                                     </div>
                                     <div class="flex flex-col gap-5 w-full">
-                                        <button class="btn">A2</button>
-                                        <button class="btn">B2</button>
-                                        <button class="btn">C2</button>
-                                        <button class="btn">D2</button>
-                                        <button class="btn">E2</button>
-                                        <button class="btn">F2</button>
-                                        <button class="btn">G2</button>
-                                        <button class="btn">H2</button>
-                                        <button class="btn">I2</button>
-                                        <button class="btn">J2</button>
+                                        <button id="A2" class="btn allSeats">A2</button>
+                                        <button id="B2" class="btn allSeats">B2</button>
+                                        <button id="C2" class="btn allSeats">C2</button>
+                                        <button id="D2" class="btn allSeats">D2</button>
+                                        <button id="E2" class="btn allSeats">E2</button>
+                                        <button id="F2" class="btn allSeats">F2</button>
+                                        <button id="G2" class="btn allSeats">G2</button>
+                                        <button id="H2" class="btn allSeats">H2</button>
+                                        <button id="I2" class="btn allSeats">I2</button>
+                                        <button id="J2" class="btn allSeats">J2</button>
                                     </div>
                                 </div>
                                 <!-- Right side seats -->
                                 <div class="flex gap-7 w-full">
                                     <div class="flex flex-col gap-5 w-full">
-                                        <button class="btn">A3</button>
-                                        <button class="btn">B3</button>
-                                        <button class="btn">C3</button>
-                                        <button class="btn">D3</button>
-                                        <button class="btn">E3</button>
-                                        <button class="btn">F3</button>
-                                        <button class="btn">G3</button>
-                                        <button class="btn">H3</button>
-                                        <button class="btn">I3</button>
-                                        <button class="btn">J3</button>
+                                        <button id="A3" class="btn allSeats">A3</button>
+                                        <button id="B3" class="btn allSeats">B3</button>
+                                        <button id="C3" class="btn allSeats">C3</button>
+                                        <button id="D3" class="btn allSeats">D3</button>
+                                        <button id="E3" class="btn allSeats">E3</button>
+                                        <button id="F3" class="btn allSeats">F3</button>
+                                        <button id="G3" class="btn allSeats">G3</button>
+                                        <button id="H3" class="btn allSeats">H3</button>
+                                        <button id="I3" class="btn allSeats">I3</button>
+                                        <button id="J3" class="btn allSeats">J3</button>
                                     </div>
                                     <div class="flex flex-col gap-5 w-full">
-                                        <button class="btn">A4</button>
-                                        <button class="btn">B4</button>
-                                        <button class="btn">C4</button>
-                                        <button class="btn">D4</button>
-                                        <button class="btn">E4</button>
-                                        <button class="btn">F4</button>
-                                        <button class="btn">G4</button>
-                                        <button class="btn">H4</button>
-                                        <button class="btn">I4</button>
-                                        <button class="btn">J4</button>
+                                        <button id="A4" class="btn allSeats">A4</button>
+                                        <button id="B4" class="btn allSeats">B4</button>
+                                        <button id="C4" class="btn allSeats">C4</button>
+                                        <button id="D4" class="btn allSeats">D4</button>
+                                        <button id="E4" class="btn allSeats">E4</button>
+                                        <button id="F4" class="btn allSeats">F4</button>
+                                        <button id="G4" class="btn allSeats">G4</button>
+                                        <button id="H4" class="btn allSeats">H4</button>
+                                        <button id="I4" class="btn allSeats">I4</button>
+                                        <button id="J4" class="btn allSeats">J4</button>
                                     </div>
                                 </div>
                             </div>
@@ -312,31 +298,28 @@
                             <div class=" py-3 border-b-2 border-dashed ">
                                 <ul class="flex font-semibold justify-between">
                                     <li>Seat <span
+                                            id="seatCount"
                                             class="bg-green-400 p-1 rounded-full text-white font-semibold">0</span></li>
-                                    <li>Class</li>
+                                    <li class="-ml-11">Class</li>
                                     <li>Price</li>
                                 </ul>
                             </div>
-                            <div id="" class=" border-b-2 text-[#03071280]">
-                                <ul class="flex py-3 justify-between">
-                                    <li>C2</li>
-                                    <li>Economy</li>
-                                    <li>550</li>
-                                </ul>
+                            <div id="seatInfo" class=" border-b-2 text-[#03071280]">
                             </div>
                             <ul class="flex py-3 font-semibold justify-between">
                                 <li>Total Price</li>
-                                <li>BDT <span>0</span></li>
+                                <li>BDT <span id="totalPrice">0</span></li>
                             </ul>
-                            <div class=" flex p-2 rounded-lg bg-white">
-                                <input class=" w-full outline-none bg-transparent px-3 py-0"
+                            <p id="discountPrice"></p>
+                            <div id="couponContainer" class=" flex p-2 rounded-lg bg-white">
+                                <input id="couponInput" class=" w-full outline-none bg-transparent px-3 py-0"
                                     placeholder="Have any coupon?" type="text">
-                                <button
-                                    class="py-2 px-4 bg-[#1DD100] rounded-lg text-white font-semibold">Apply</button>
+                                <button id="applyBtn" disabled onclick="applyBtn()"
+                                    class="btn py-2 hover:bg-[#1DD100] px-4 bg-[#1DD100] rounded-lg text-white font-semibold">Apply</button>
                             </div>
                             <ul class="flex py-3 font-semibold justify-between">
                                 <li>Grand Total</li>
-                                <li>BDT <span>0</span></li>
+                                <li>BDT <span id="grandTotal">0</span></li>
                             </ul>
 
                         </div>
@@ -352,7 +335,7 @@
                                 <label for="name" class="font-semibold">Email ID</label>
                                 <input class=" w-full p-4 font-semibold rounded-lg mb-5 mt-3 border-2 outline-none"
                                     placeholder="Enter your email id" type="email">
-                                <button
+                                <button onclick="nextBtn()"
                                     class="py-3 w-full px-4 bg-[#1DD100] rounded-lg text-white font-semibold">Next</button>
                             </form>
                             <ul class="flex text-center gap-10 mt-5 text-[#03071280] font-semibold ">
@@ -378,7 +361,7 @@
                 <h1 class="text-xl font-semibold">Download our app</h1>
                 <div class="flex gap-3 items-center border p-1 px-2 rounded-lg mt-3">
                     <img src="./images/playstore.png" class="h-12" alt="">
-                    <p>get in on <br> <span class="text-2xl font-semibold">Google Play</span></p>
+                    <p>get it on <br> <span class="text-2xl font-semibold">Google Play</span></p>
                 </div>
             </div>
         </div>
@@ -391,7 +374,7 @@
             </ul>
         </div>
     </footer>
-    <script src="scriptJs/script.js"></script>
+    <script src="scriptJs/utilitis.js"></script>
     <script src="scriptJs/index.js"></script>
 </body>
 
