--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         <section id="modal" class=" hidden transition w-full h-full fixed top-0 bottom-0 bg-[#0000007a]">
             <div
                 class="text-center md:py-10 md:px-14 px-8 py-5 bg-white md:w-[550px] w-[400px] mt-[10%] space-y-5 mx-auto rounded-2xl">
-                <img class="mx-auto block" src="./Images/success.png" alt="">
+                <img class="mx-auto block" src="./images/success.png" alt="">
                 <h1 class="text-3xl text-[#1DD100] font-semibold">SUCCESS</h1>
                 <div>
                     <p class="font-semibold">Thank you for Booking Our Bus Seats.
